--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
@@ -61,7 +61,7 @@ datagrid:
         actions:
             view:
                 type:         navigate
-                acl_resource: magecore_testtaskoro.issue_update
+                acl_resource: magecore_testtaskoro.issue_view
                 label:        oro.grid.action.view
                 icon:         eye-open
                 link:         view_link
