OOT-826 : tt7: Grid for view - details  - resolution entity

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
@@ -23,10 +23,10 @@ datagrid:
                 label: Type
             createdAt:
                 label: created
-                frontend_type: date
+                frontend_type: datetime
             updatedAt:
                 label: updated
-                frontend_type: date
+                frontend_type: datetime
         properties:
             id: ~
             update_link:
