OOT-826 : tt7: Grid for view - details  - resolution entity

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
@@ -52,6 +52,8 @@ datagrid:
                     data_name: v.code
                 createdAt:
                     data_name: v.createdAt
+                updatedAt:
+                    data_name: v.updatedAt
             default:
                 updatedAt: ASC
         filters:
