OOT-824 : tt5: notes + email  - node install

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/oro/bundles.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/oro/bundles.yml
@@ -1,2 +1,2 @@
 bundles:
-    - Magecore\Bundle\TestTaskOroBundle\MagecoreTestTaskOroBundle
+    - { name: Magecore\Bundle\TestTaskOroBundle\MagecoreTestTaskOroBundle, priority: 100 }
