--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "require": {
         "oro/platform": "1.7.*"
     },
+    "require-dev": {
+      "phpunit/phpunit": "4.2.*"
+    },
     "config": {
         "component-dir": "web/bundles/components"
     },
