OOT-822 : tt3: CRUD for REST  - do create crud - fix bugs

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/validation.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/validation.yml
@@ -8,5 +8,7 @@ Magecore\Bundle\TestTaskOroBundle\Entity\Issue:
             - NotBlank: ~
         priority:
             - NotBlank: ~
+        description:
+            - NotBlank: ~
         type:
             - NotBlank: ~
