OOT-826 : tt7: Grid for view - details  - add parent view.

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
@@ -134,4 +134,10 @@ datagrid:
                 from:
                     - { table: MagecoreTestTaskOroBundle:Issue, alias: v }
                 where:
-                    - v.parentIssue = :parentId
+                    and:
+                        - v.parentIssue = :parentId
+        columns:
+            code:
+                label: '# code'
+            summary:
+                label: Summary
