OOT-826 : tt7: Grid for view - details  - add parent view.

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
@@ -141,3 +141,14 @@ datagrid:
                 label: '# code'
             summary:
                 label: Summary
+    issue-assigned-grid:
+        extends: issues-grid
+        source:
+            query:
+                where:
+                    and:
+                        - (assignedTo.id = :id OR owner.id = :id)
+            bind_parameters:
+                - id
+        options:
+            entity_pagination: false
