OOT-829 : tt10: grid on user page  - done user placeholders

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/placeholders.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/placeholders.yml
@@ -5,5 +5,5 @@ placeholders:
 
 items:
     magecore_testtaskoro_issue_grid:
-        template: MagecoreTesttaskOroBundle:Issue:Datagrid:user.html.twig
+        template: MagecoreTestTaskOroBundle:Issue:user.html.twig
         applicable: @oro_ui.placeholder.filter->isInstanceOf($entity$, %oro_user.entity.class%)
