OOT-833 : tt14:load fixtures  - load user data fixtures

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/search.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/search.yml
@@ -57,23 +57,22 @@ Magecore\Bundle\TestTaskOroBundle\Entity\Issue:
             relation_type:          many-to-one
             relation_fields:
                 -
-                    name:                   namePrefix
-                    target_type:            text
-                    target_fields:          [namePrefix]
+                    name:           username
+                    target_type:    text
+                    target_fields:  [username]
                 -
-                    name:                   firstName
-                    target_type:            text
-                    target_fields:          [firstName]
+                    name:           firstName
+                    target_type:    text
+                    target_fields:  [firstName]
                 -
-                    name:                   middleName
-                    target_type:            text
-                    target_fields:          [middleName]
+                    name:           lastName
+                    target_type:    text
+                    target_fields:  [lastName]
                 -
-                    name:                   lastName
-                    target_type:            text
-                    target_fields:          [lastName]
+                    name:           namePrefix
+                    target_type:    text
+                    target_fields:  [namePrefix]
                 -
-                    name:                   nameSuffix
-                    target_type:            text
-                    target_fields:          [nameSuffix]
-
+                    name:           nameSuffix
+                    target_type:    text
+                    target_fields:  [nameSuffix]
