OOT-816 : Academic project on Oro Platform  - load user data fixtures

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/config/datagrid.yml
@@ -139,6 +139,9 @@ datagrid:
         columns:
             code:
                 label: '# code'
+                type:          twig
+                frontend_type: html
+                template:      MagecoreTestTaskOroBundle:Issue:Datagrid/Property/subtask.html.twig
             summary:
                 label: Summary
     issue-assigned-grid:
